--- a/ledger-smb/trunk/debian/TODO
+++ b/ledger-smb/trunk/debian/TODO
@@ -1,18 +1,22 @@
 debian/TODO for LedgerSMB v1.3
 
+-> this may be resolved or resolvable with 1.3.19
 - The package installs the LedgerSMB css directory to /var/lib/ledgersmb/css,
 but the application itself currently expects it to be in the main installation
-directory. The issue at least partially resolved with v1.3.18 and v1.3.19.
+directory. The issue is at least partially resolved with v1.3.18 and v1.3.19.
 (A symbolic link pointing to it is installed with the current packaging
 as a workaround for the issue.)
 
 - A review and translation process is underway for LedgerSMB debian/templates
-and debian/po/*; do updates provided by debian-l10n-english once that process
-has been completed. Reference also # 674023, 676494 (cs.po), 676511 (pl.po),
-676556 (sv.po), and 676662 (ru.po).
+and debian/po/*; do provided updates once that process has been completed.
+Reference also # 674023, 676494 (cs.po), 678547 (de.po), 678265 (es.po),
+677953 (fr.po),  678597 (gl.po), 678442 (it.po), 676511 (pl.po),
+677839 (pt.po), 677793 (pt_BR.po), 676662 (ru.po), 678488 (sk.po),
+and 676556 (sv.po).
 
-- The application UPGRADE file does not really need to be installed with the
-package?  Any useful information could be moved to README.Debian.
+-  Errors 'duplicate message definition' in locale/po/es_AR.po.  The author
+(Andres) took a look at the issue and fixed it.  His changes were imported
+and are likley to be available with upstream v1.3.20. Debian bug # 678281.
 
 - The dbconfig configuration is apparently capable of creating the ledgersmb
 user but it is not getting created with the necessary permissions. It is also
@@ -20,6 +24,13 @@ apparently automatically creating a database named ledgersmb when it creates
 that user.  The owner of it can come up as postgres; should make that
 ledgersmb, if that database is even needed.
 
+-> If move where these are installed again, this may be moot.
+- The initial default set of HTML/LaTeX/Text templates is being installed as
+examples and copied to the /var/lib/ledgersmb/templates directory during the
+initial package install.  Because example files over a certain size are 
+automatically compressed, there may be files that have been compressed in that
+default set of templates.  Example: invoice.tex.gz.
+ 
 - Upstream uses pdflatex to create distribution LedgerSMB-manual.pdf from the
 source file doc/manual/LedgerSMB-manual.tex. Use the same source file to create
 an HTML version?
@@ -46,4 +57,4 @@ to be operational with it.
 -> Instead of patching the files that use it directly, try using dh_linktree to
 create the set of links to the debian packages.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 10 Jun 2012 18:39:04 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 23 Jun 2012 14:53:24 -0400
