--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.19~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.19-1~1) UNRELEASED; urgency=low
 
   * New upstream release.
     - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
@@ -6,7 +6,7 @@ ledgersmb (1.3.19~rc1-1~1) UNRELEASED; urgency=low
     - Update the URL in the Vcs-Browser entry.
   * Update debian/watch to exclude development snapshots. (Closes: #677612)
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 18 Jun 2012 22:33:24 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 23 Jun 2012 14:33:24 -0400
 
 ledgersmb (1.3.18-1) unstable; urgency=low
 
@@ -65,6 +65,8 @@ ledgersmb (1.3.15-2) unstable; urgency=low
 
   * Rewrite LedgerSMB README.Debian, including database related information.
   * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
+  * Changes for debian/patches/*:
+    - Renumber 15_httpdconf.patch as 10_httpdconf.patch. 
     - Add 15_UI-setup-credentials.patch to set 'ledgersmb' as the default
       database superuser for setup.pl.
 
