--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -1,27 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Czech PO debconf template translation of ledgersmb.
+# Copyright (C) 2012 Michal Simunek <michal.simunek@gmail.com>
+# This file is distributed under the same license as the ledgersmb package.
+# Michal Simunek <michal.simunek@gmail.com>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: ledgersmb\n"
+"Project-Id-Version: ledgersmb 1.3.15-3\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2012-06-07 08:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2012-06-07 11:31+0200\n"
+"Last-Translator: Michal Simunek <michal.simunek@gmail.com>\n"
+"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: string
 #. Description
 #: ../templates:2001
 msgid "Database administrative user login:"
-msgstr ""
+msgstr "Přihlašovací jméno správce databáze:"
 
 #. Type: string
 #. Description
@@ -31,12 +30,15 @@ msgid ""
 "login is needed for the administrative web user interface, typically at "
 "http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Zadejte prosím přihlašovací jméno správce databáze LedgerSMB. Toto jméno je "
+"třeba pro správcovské webové rozhraní, obvykle dostupném na http://localhost/"
+"ledgersmb/setup.pl."
 
 #. Type: password
 #. Description
 #: ../templates:3001
 msgid "Database administrative user password:"
-msgstr ""
+msgstr "Heslo správce databáze:"
 
 #. Type: password
 #. Description
@@ -46,12 +48,15 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Zadejte prosím heslo pro správce databáze LedgerSMB. Toto heslo je třeba pro "
+"správcovské webové rozhraní, obvykle dostupném na http://localhost/ledgersmb/"
+"setup.pl."
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid "Configure LedgerSMB automatically?"
-msgstr ""
+msgstr "Nastavit LedgerSMB automaticky?"
 
 #. Type: boolean
 #. Description
@@ -60,6 +65,8 @@ msgid ""
 "The configuration program for the package can automatically configure some "
 "aspects of LedgerSMB, such as the LedgerSMB database user."
 msgstr ""
+"Konfigurační program pro balíček může automaticky nastavit některé aspekty "
+"LedgerSMB, jako je databázový uživatel pro LedgerSMB."
 
 #. Type: boolean
 #. Description
@@ -68,3 +75,5 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
+"Obecnější informace o počátečním nastavení aplikace naleznete v souboru /usr/"
+"share/doc/ledgersmb/README.Debian."
