--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -1,27 +1,26 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Portuguese translation for ledgersmb's debconf messages
+# Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the ledgersmb package.
+# Miguel Figueiredo <elmig@debianpt.org>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2012-06-07 08:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2012-06-16 17:07+0100\n"
+"Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
+"Language-Team: Portuguese <traduz@debianpt.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: string
 #. Description
 #: ../templates:2001
 msgid "Database administrative user login:"
-msgstr ""
+msgstr "Login do administrador da base de dados:"
 
 #. Type: string
 #. Description
@@ -31,12 +30,15 @@ msgid ""
 "login is needed for the administrative web user interface, typically at "
 "http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Por favor introduza o login do administrador da base de dados LedgerSMB. "
+"Este login é necessário para o interface web de administração, tipicamente "
+"encontra-se em http://localhost/ledgersmb/setup.pl."
 
 #. Type: password
 #. Description
 #: ../templates:3001
 msgid "Database administrative user password:"
-msgstr ""
+msgstr "Palavra-passe do administrador da base de dados:"
 
 #. Type: password
 #. Description
@@ -46,12 +48,15 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Por favor introduza a palavra-passe do administrador da base de dados "
+"LedgerSMB. Esta palavra-passe é necessária para o interface web de "
+"administração, tipicamente localizado em http://localhost/ledgersmb/setup.pl."
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid "Configure LedgerSMB automatically?"
-msgstr ""
+msgstr "Configurar automaticamente LedgerSMB?"
 
 #. Type: boolean
 #. Description
@@ -60,6 +65,9 @@ msgid ""
 "The configuration program for the package can automatically configure some "
 "aspects of LedgerSMB, such as the LedgerSMB database user."
 msgstr ""
+"O programa de configuração para o pacote pode configurar automaticamente "
+"alguns aspectos do LedgerSMB, tais como o utilizador da base de dados "
+"LedgerSMB."
 
 #. Type: boolean
 #. Description
@@ -68,3 +76,5 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
+"Mais informação geral sobre a configuração inicial da aplicação pode ser "
+"encontrada em /usr/share/doc/ledgersmb/README.Debian."
