--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -1,27 +1,28 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Translation of ledgersmb debconf template to Swedish
+# Copyright (C) 2012 Martin Bagge <brother@bsnet.se>
+# This file is distributed under the same license as the ledgersmb package.
 #
-#, fuzzy
+# Martin Bagge <brother@bsnet.se>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2012-06-07 08:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2012-06-07 20:39+0100\n"
+"Last-Translator: Martin Bagge / brother <brother@bsnet.se>\n"
+"Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Swedish\n"
+"X-Poedit-Country: Sweden\n"
 
 #. Type: string
 #. Description
 #: ../templates:2001
 msgid "Database administrative user login:"
-msgstr ""
+msgstr "Administrativ användare för databasen:"
 
 #. Type: string
 #. Description
@@ -31,12 +32,15 @@ msgid ""
 "login is needed for the administrative web user interface, typically at "
 "http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Ange användarnamnet för administration av LedgerSMB-databasen. "
+"Användarnamnet behövs för det administrativa webbgränssnittet, vanligen "
+"tillgängligt på http://localhost/ledgersmb/setup.pl."
 
 #. Type: password
 #. Description
 #: ../templates:3001
 msgid "Database administrative user password:"
-msgstr ""
+msgstr "Lösenord för databasens administrativa användare:"
 
 #. Type: password
 #. Description
@@ -46,12 +50,15 @@ msgid ""
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost/ledgersmb/setup.pl."
 msgstr ""
+"Ange lösenordet för LedgerSMBs administrativa användare. Lösenordet behövs "
+"för det administrativa webbgränssnittet, vanligen tillgängligt på http://"
+"localhost/ledgersmb/setup.pl."
 
 #. Type: boolean
 #. Description
 #: ../templates:4001
 msgid "Configure LedgerSMB automatically?"
-msgstr ""
+msgstr "Ska inställningar för LedgerSMB göras automatiskt?"
 
 #. Type: boolean
 #. Description
@@ -60,6 +67,8 @@ msgid ""
 "The configuration program for the package can automatically configure some "
 "aspects of LedgerSMB, such as the LedgerSMB database user."
 msgstr ""
+"Konfigurationsprogrammet för paketet kan göra automatiska inställningar för "
+"vissa delar av LedgerSMB, exempelvis LedgerSMBs databasanvändare."
 
 #. Type: boolean
 #. Description
@@ -68,3 +77,5 @@ msgid ""
 "More general information about the initial configuration of the application "
 "can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgstr ""
+"Mer generell information om de grundläggande inställningarna av "
+"applikationen kan hittas i /usr/share/doc/ledgersmb/README.Debian."
