--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,11 +1,10 @@
-ledgersmb (1.3.21-1) unstable; urgency=low
+ledgersmb (1.3.21-2) unstable; urgency=low
 
-  Empty language specific HTML, LaTeX, and Text template directories are not
-  installed with the package. In order to edit templates online for a particular
-  language, create the language specific directory like templates/demo/en_US
-  and you will then be able to edit a template for that language online.
+  Language specific HTML, LaTeX, and Text templates can be edited online but
+  the language specific directory, like /var/ledgersmb/templates/demo/en_US,
+  first needs to be manually created.
 
- -- Robert James Clay <jame@rocasa.us>  Sun,  5 Aug 2012 17:41:25 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 26 Aug 2012 09:49:25 -0400
 
 ledgersmb (1.3.18-1) unstable; urgency=low
 
